HosMan/main/default/objects/New_Patient__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Consultant__c</referenceTo>
    <relationshipLabel>New Patients</relationshipLabel>
    <relationshipName>New_Patients</relationshipName>
    <type>Lookup</type>
</CustomField>