HosMan/main/default/objects/New_Patient__c/fields/Height_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_cm__c</fullName>
    <label>Height(cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>