HosMan/main/default/objects/New_Patient__c/fields/Landline_No__c.field-meta.xml
<CustomField>
    <fullName>Landline_No__c</fullName>
    <label>Landline No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>