HosMan/main/default/objects/New_Patient__c/fields/Name1__c.field-meta.xml
<CustomField>
    <fullName>Name1__c</fullName>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>