HosMan/main/default/objects/New_Patient__c/fields/Occuption__c.field-meta.xml
<CustomField>
    <fullName>Occuption__c</fullName>
    <label>Occuption</label>
    <length>20</length>
    <type>Text</type>
</CustomField>