HosMan/main/default/objects/New_Patient__c/fields/Ref_By__c.field-meta.xml
<CustomField>
    <fullName>Ref_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref By</label>
    <referenceTo>Add_Ref_By__c</referenceTo>
    <relationshipLabel>New Patients</relationshipLabel>
    <relationshipName>New_Patients</relationshipName>
    <type>Lookup</type>
</CustomField>