HosMan/main/default/objects/New_Patient__c/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <label>Weight(kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>